// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progressbar 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: accent 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 cIlUC"
    color="accent"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: dubai100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 kZlsvb"
    color="dubai100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: geneva100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 bcESoA"
    color="geneva100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: miami100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 flCHzJ"
    color="miami100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: moscow100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 idCTTt"
    color="moscow100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: nice100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 btyVOd"
    color="nice100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: osaka100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gwWMHq"
    color="osaka100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: oslo100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 jGYoUl"
    color="oslo100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: oslo120 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: paris100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 jmweAI"
    color="paris100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: seattle140 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 iXKiRB"
    color="seattle140"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: sochi100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 cPdhhf"
    color="sochi100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ color: tokyo100 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 kUmUku"
    color="tokyo100"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ loading 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  >
    <svg
      class="Loadingstyles__Box-sc-1vysjtz-1 dCOwmU"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <pattern
          height="20"
          id="strips"
          patternTransform="rotate(-30)"
          patternUnits="userSpaceOnUse"
          width="80"
          x="10"
          y="10"
        >
          <rect
            class="Loadingstyles__PatternRect-sc-1vysjtz-0 hLkmys"
            height="10"
            width="80"
            x="0"
            y="0"
          />
        </pattern>
      </defs>
      <rect
        fill="url(#strips)"
        height="100%"
        width="100%"
        x="0"
        y="0"
      />
    </svg>
  </div>
</div>
`;

exports[`Progressbar w/ size: l 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 dUtaQS"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ size: m 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ size: s 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 ebQjGZ"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  />
</div>
`;

exports[`Progressbar w/ view w/ child: l 1`] = `
<div
  class="Progressbarstyles__CircleBox-sc-9u8n53-6 ezdLOV"
>
  <svg
    class="Progressbarstyles__CircleSVG-sc-9u8n53-3 kcaFuf"
  >
    <circle
      class="Progressbarstyles__CircleBack-sc-9u8n53-4 dztelO"
    />
    <circle
      class="Progressbarstyles__CircleProgress-sc-9u8n53-5 dBoxtR"
      color="oslo120"
      value="50"
    />
  </svg>
  <div
    class="Progressbarstyles__CircleContent-sc-9u8n53-7 jhFrJS"
  >
    <div
      style="height:100%;display:flex;align-items:center;justify-content:center"
    >
      34%
    </div>
  </div>
</div>
`;

exports[`Progressbar w/ view w/ child: m 1`] = `
<div
  class="Progressbarstyles__CircleBox-sc-9u8n53-6 ezdLOV"
>
  <svg
    class="Progressbarstyles__CircleSVG-sc-9u8n53-3 bxpMcD"
  >
    <circle
      class="Progressbarstyles__CircleBack-sc-9u8n53-4 cIIcZb"
    />
    <circle
      class="Progressbarstyles__CircleProgress-sc-9u8n53-5 hefzLA"
      color="oslo120"
      value="50"
    />
  </svg>
  <div
    class="Progressbarstyles__CircleContent-sc-9u8n53-7 cWJLkG"
  >
    <div
      style="height:100%;display:flex;align-items:center;justify-content:center"
    >
      34%
    </div>
  </div>
</div>
`;

exports[`Progressbar w/ view w/ child: s 1`] = `
<div
  class="Progressbarstyles__CircleBox-sc-9u8n53-6 ezdLOV"
>
  <svg
    class="Progressbarstyles__CircleSVG-sc-9u8n53-3 gldwKv"
  >
    <circle
      class="Progressbarstyles__CircleBack-sc-9u8n53-4 fTwEea"
    />
    <circle
      class="Progressbarstyles__CircleProgress-sc-9u8n53-5 fCjBiZ"
      color="oslo120"
      value="50"
    />
  </svg>
  <div
    class="Progressbarstyles__CircleContent-sc-9u8n53-7 jClxxC"
  >
    <div
      style="height:100%;display:flex;align-items:center;justify-content:center"
    >
      34%
    </div>
  </div>
</div>
`;

exports[`Progressbar w/ view: circle 1`] = `
<div
  class="Progressbarstyles__CircleBox-sc-9u8n53-6 ezdLOV"
>
  <svg
    class="Progressbarstyles__CircleSVG-sc-9u8n53-3 bxpMcD"
  >
    <circle
      class="Progressbarstyles__CircleBack-sc-9u8n53-4 cIIcZb"
    />
    <circle
      class="Progressbarstyles__CircleProgress-sc-9u8n53-5 hefzLA"
      color="oslo120"
      value="50"
    />
  </svg>
</div>
`;

exports[`Progressbar w/ view: line 1`] = `
<div
  class="Progressbarstyles__Box-sc-9u8n53-0 fayEqV"
>
  <div
    class="Progressbarstyles__Line-sc-9u8n53-1 lfqWLM"
  />
  <div
    class="Progressbarstyles__Progress-sc-9u8n53-2 gXNIna"
    color="oslo120"
    width="50"
  />
</div>
`;
